--- a/jul/jul-slf4j-handler/pom.xml
+++ b/jul/jul-slf4j-handler/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.jul-slf4j-handler</artifactId>
-	<version><!-- LV -->0.9.40-SNAPSHOT</version>
+	<version><!-- LV -->0.9.40</version>
 	<packaging>jar</packaging>
 	<name>java.util.logging Handler using SLF4J</name>
 	<description>This file is part of Lilith. It's a java.util.logging to slf4j bridge handler.</description>
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.40-SNAPSHOT</version>
+		<version><!-- LV -->0.9.40</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
