--- a/lilith-data/logging-xml/pom.xml
+++ b/lilith-data/logging-xml/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.data.logging-xml</artifactId>
-	<version><!-- LV -->0.9.40-SNAPSHOT</version>
+	<version><!-- LV -->0.9.40</version>
 	<packaging>jar</packaging>
 	<name>Lilith Data Types - Logging - XML (StaX)</name>
 	<description>This file is part of Lilith. It contains XML I/O for LoggingEvent.</description>
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.40-SNAPSHOT</version>
+		<version><!-- LV -->0.9.40</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
