--- a/log4j/log4j-xml/pom.xml
+++ b/log4j/log4j-xml/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.log4j.xml</artifactId>
-	<version><!-- LV -->0.9.40</version>
+	<version><!-- LV -->0.9.41-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Lilith - LOG4J - XML (StaX)</name>
 	<description>This file is part of Lilith. It contains LOG4J XML I/O.</description>
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.40</version>
+		<version><!-- LV -->0.9.41-SNAPSHOT</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
