--- a/sandbox/jgroups-sandbox/pom.xml
+++ b/sandbox/jgroups-sandbox/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.sandbox.jgroups</artifactId>
-	<version><!-- LV -->0.9.40</version>
+	<version><!-- LV -->0.9.41-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>JGroups Sandbox</name>
 	<description>This file is part of Lilith. It's a jgroup sandbox.</description>
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.40</version>
+		<version><!-- LV -->0.9.41-SNAPSHOT</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
