--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -1,14 +1,11 @@
 sulkyBaseVersion = '0.9.14'
 
 versions = [
-'aspectj':        '1.6.8',
-'easymock':       '2.4',
-'httpcomponents': '4.0.1',
+'aspectj':        '1.6.10',
+'jackson':        '1.7.1',
 'log4j':          '1.2.16',
 'logback':        '0.9.27',
 'slf4j':          '1.6.1',
-'jackson':        '1.6.0',
-'commonsLogging': '1.1.1',
 'spring':         '3.0.5.RELEASE',
 'sulky':          "${System.properties.'release' ? sulkyBaseVersion : sulkyBaseVersion+'-SNAPSHOT'}"
 ]
@@ -17,23 +14,21 @@ libraries = [
 'aspectjrt':                "org.aspectj:aspectjrt:${versions.aspectj}",
 'aspectjweaver':            "org.aspectj:aspectjweaver:${versions.aspectj}",
 'cglib-nodep':              'cglib:cglib-nodep:2.2',
-'commons-io':               'commons-io:commons-io:1.3.1',
-'commons-lang':             'commons-lang:commons-lang:2.3',
-'easymock':                 "org.easymock:easymock:${versions.easymock}",
-'easymockclassextension':   "org.easymock:easymockclassextension:${versions.easymock}",
+'commons-io':               'commons-io:commons-io:2.0.1',
+'commons-lang':             'commons-lang:commons-lang:2.6',
 'flyingsaucer':             'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.flyingsaucer.core-renderer:8RC1',
 'glazedlists':              'net.java.dev.glazedlists:glazedlists_java15:1.8.0',
-'groovy':                   'org.codehaus.groovy:groovy:1.7.5',
-'httpclient':               "org.apache.httpcomponents:httpclient:${versions.httpcomponents}",
-'httpcore':                 "org.apache.httpcomponents:httpcore:${versions.httpcomponents}",
+'groovy':                   'org.codehaus.groovy:groovy:1.7.6',
+'httpclient':               "org.apache.httpcomponents:httpclient:4.0.3",
+'httpcore':                 "org.apache.httpcomponents:httpcore:4.1",
 'jcl-over-slf4j':           "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
 'jgroups-all':              'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.jgroups-all:2.8.0.CR3',
 'jmdns':                    'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.jmdns:3.0',
 'jackson-core':             "org.codehaus.jackson:jackson-core-lgpl:${versions.jackson}",
 'jackson-mapper':           "org.codehaus.jackson:jackson-mapper-lgpl:${versions.jackson}",
-'jcommander':               'com.beust:jcommander:1.7',
-'jgoodies-looks':           'com.jgoodies:looks:2.2.0',
-'joda-time':                'joda-time:joda-time:1.6',
+'jcommander':               'com.beust:jcommander:1.13',
+'jgoodies-looks':           'com.jgoodies:looks:2.2.2',
+'joda-time':                'joda-time:joda-time:1.6.2',
 'junique':                  'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.junique:1.0.2',
 'junit':                    'junit:junit:4.8.2',
 'log4j':                    "log4j:log4j:${versions.log4j}",
