--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -543,7 +543,7 @@
 			<dependency>
 				<groupId>org.codehaus.groovy</groupId>
 				<artifactId>groovy</artifactId>
-                <version>1.7.8</version>
+                <version>1.8.0-rc-1</version>
 			</dependency>
 			
 			<dependency>
