--- a/lilith-conditions/pom.xml
+++ b/lilith-conditions/pom.xml
@@ -41,7 +41,13 @@
 			<artifactId>de.huxhorn.sulky.conditions</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>de.huxhorn.sulky</groupId>
+			<artifactId>de.huxhorn.sulky.groovy</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
