--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -384,6 +384,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>de.huxhorn.sulky</groupId>
+			<artifactId>de.huxhorn.sulky.groovy</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.beust</groupId>
 			<artifactId>jcommander</artifactId>
 			<scope>compile</scope>
