--- a/projectDependencies.gradle
+++ b/projectDependencies.gradle
@@ -432,6 +432,7 @@ project(':lilith-conditions') {
 		compile project(':lilith-data:logging')
 		compile project(':lilith-data:access')
 		compile libraries.'sulky-conditions'
+		compile libraries.'sulky-groovy'
 		compile libraries.'slf4j-api'
 		compile libraries.'groovy'
 	}
@@ -482,6 +483,7 @@ project(':lilith') {
 		compile libraries.'sulky-swing'
 		compile libraries.'sulky-tasks'
 		compile libraries.'sulky-io'
+		compile libraries.'sulky-groovy'
 		compile libraries.'jcommander'
 		compile libraries.'commons-lang'
 		compile libraries.'commons-io'
