Added Gradle wrapper for '1.0-milestone-2'.

--- a/build.gradle
+++ b/build.gradle
@@ -2,3 +2,6 @@ apply from: 'dependencyDefinitions.gradle'
 apply from: 'projectDependencies.gradle'
 apply from: 'config.gradle'
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.0-milestone-2'
+}
