--- a/lilith-data/access/pom.xml
+++ b/lilith-data/access/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.data.access</artifactId>
-	<version><!-- LV -->0.9.41-SNAPSHOT</version>
+	<version><!-- LV -->0.9.41</version>
 	<packaging>jar</packaging>
 	<name>Lilith Data Types - Access</name>
 	<description>This file is part of Lilith. It contains the AccesEvent datatype and related classes.</description>
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.41-SNAPSHOT</version>
+		<version><!-- LV -->0.9.41</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
