--- a/logback/classic/pom.xml
+++ b/logback/classic/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.logback.classic</artifactId>
-	<version><!-- LV -->0.9.41-SNAPSHOT</version>
+	<version><!-- LV -->0.9.41</version>
 	<packaging>jar</packaging>
 	<name>Logback Classic Enhancements</name>
 	<description>This file is part of Lilith. It contains an NDC implementation that can be used in conjunction with the lilith appenders to get NDC functionality in Logback.</description>
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.41-SNAPSHOT</version>
+		<version><!-- LV -->0.9.41</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
