Getting rid of superfluous artifacts. See http://gradle.1045684.n5.nabble.com/Superfluous-artifact-creation-in-my-build-td4371414.html Thanks, Adam!

--- a/config.gradle
+++ b/config.gradle
@@ -4,53 +4,49 @@ import de.huxhorn.sulky.plist.*
 apply from: 'GitHeadHash.gradle'
 
 artifactMapping = [
-'eventsource-xml':                 'de.huxhorn.lilith.data.eventsource-xml',
-'eventsource':                     'de.huxhorn.lilith.data.eventsource',
-'lilith-data':                     'lilith-data', // ignore
-'lilith-sender':                   'de.huxhorn.lilith.sender',
-'logging':                         'de.huxhorn.lilith.data.logging',
-'logging-io-test':                 'de.huxhorn.lilith.data.logging-io-test',
-'logging-xml':                     'de.huxhorn.lilith.data.logging-xml',
-'logging-xml-serializer':          'de.huxhorn.lilith.data.logging-xml-serializer',
-'logging-protobuf':                'de.huxhorn.lilith.data.logging.protobuf',
-'logging-json':                    'de.huxhorn.lilith.data.logging-json',
-'logging-json-serializer':         'de.huxhorn.lilith.data.logging-json-serializer',
-'access':                          'de.huxhorn.lilith.data.access',
-'access-protobuf':                 'de.huxhorn.lilith.data.access.protobuf',
-'lilith-constants':                'de.huxhorn.lilith.constants',
-'lilith-engine':                   'de.huxhorn.lilith.engine',
-'lilith-xml-logging':              'de.huxhorn.lilith.xml-logging',
-'lilith-json-logging':             'de.huxhorn.lilith.json-logging',
-'logback':                         'logback', // ignore
-'classic':                         'de.huxhorn.lilith.logback.classic',
-'logging-adapter':                 'de.huxhorn.lilith.logback.logging-adapter',
-'access-adapter':                  'de.huxhorn.lilith.logback.access-adapter',
-'producer-classic':                'de.huxhorn.lilith.logback.producer.classic',
-'producer-access':                 'de.huxhorn.lilith.logback.producer.access',
-'multiplex-appender-core':         'de.huxhorn.lilith.logback.appender.multiplex-core',
-'multiplex-appender-classic':      'de.huxhorn.lilith.logback.appender.multiplex-classic',
-'multiplex-appender-access':       'de.huxhorn.lilith.logback.appender.multiplex-access',
-'multiplex-appender-classic-xml':  'de.huxhorn.lilith.logback.appender.multiplex-classic-xml',
-'multiplex-appender-classic-json': 'de.huxhorn.lilith.logback.appender.multiplex-classic-json',
-'shutdown-context-listener':       'de.huxhorn.lilith.logback.servlet',
-'encoder-core':                    'de.huxhorn.lilith.logback.encoder.core',
-'encoder-classic':                 'de.huxhorn.lilith.logback.encoder.classic',
-'encoder-access':                  'de.huxhorn.lilith.logback.encoder.access',
-'log4j':                           'log4j', // ignore
-'log4j-throwable-parser':          'de.huxhorn.lilith.log4j.throwable',
-'log4j-xml':                       'de.huxhorn.lilith.log4j.xml',
-'log4j-producer':                  'de.huxhorn.lilith.log4j.producer',
-'jul':                             'jul', // ignore
-'jul-xml':                         'de.huxhorn.lilith.jul.xml',
-'jul-xml-import':                  'de.huxhorn.lilith.jul.xml-import',
-'jul-xml-receiver':                'de.huxhorn.lilith.jul.xml.receiver',
-'jul-slf4j-handler':               'de.huxhorn.lilith.jul-slf4j-handler',
-'lilith-sounds':                   'de.huxhorn.lilith.sounds',
-'lilith-prefs':                    'de.huxhorn.lilith.prefs',
-'lilith-conditions':               'de.huxhorn.lilith.conditions',
-'lilith':                          'de.huxhorn.lilith',
-'slf4j':                           'de.huxhorn.lilith.slf4j',
-'tracing':                         'de.huxhorn.lilith.tracing'
+'jul-slf4j-handler':                           'de.huxhorn.lilith.jul-slf4j-handler',
+'jul-xml':                                     'de.huxhorn.lilith.jul.xml',
+'jul-xml-import':                              'de.huxhorn.lilith.jul.xml-import',
+'jul-xml-receiver':                            'de.huxhorn.lilith.jul.xml.receiver',
+'lilith':                                      'de.huxhorn.lilith',
+'lilith-conditions':                           'de.huxhorn.lilith.conditions',
+'lilith-constants':                            'de.huxhorn.lilith.constants',
+'lilith-data-access':                          'de.huxhorn.lilith.data.access',
+'lilith-data-access-protobuf':                 'de.huxhorn.lilith.data.access.protobuf',
+'lilith-data-eventsource':                     'de.huxhorn.lilith.data.eventsource',
+'lilith-data-eventsource-xml':                 'de.huxhorn.lilith.data.eventsource-xml',
+'lilith-data-logging':                         'de.huxhorn.lilith.data.logging',
+'lilith-data-logging-io-test':                 'de.huxhorn.lilith.data.logging-io-test',
+'lilith-data-logging-json':                    'de.huxhorn.lilith.data.logging-json',
+'lilith-data-logging-json-serializer':         'de.huxhorn.lilith.data.logging-json-serializer',
+'lilith-data-logging-protobuf':                'de.huxhorn.lilith.data.logging.protobuf',
+'lilith-data-logging-xml':                     'de.huxhorn.lilith.data.logging-xml',
+'lilith-data-logging-xml-serializer':          'de.huxhorn.lilith.data.logging-xml-serializer',
+'lilith-engine':                               'de.huxhorn.lilith.engine',
+'lilith-json-logging':                         'de.huxhorn.lilith.json-logging',
+'lilith-prefs':                                'de.huxhorn.lilith.prefs',
+'lilith-sender':                               'de.huxhorn.lilith.sender',
+'lilith-sounds':                               'de.huxhorn.lilith.sounds',
+'lilith-xml-logging':                          'de.huxhorn.lilith.xml-logging',
+'log4j-producer':                              'de.huxhorn.lilith.log4j.producer',
+'log4j-throwable-parser':                      'de.huxhorn.lilith.log4j.throwable',
+'log4j-xml':                                   'de.huxhorn.lilith.log4j.xml',
+'logback-access-adapter':                      'de.huxhorn.lilith.logback.access-adapter',
+'logback-classic':                             'de.huxhorn.lilith.logback.classic',
+'logback-encoder-access':                      'de.huxhorn.lilith.logback.encoder.access',
+'logback-encoder-classic':                     'de.huxhorn.lilith.logback.encoder.classic',
+'logback-encoder-core':                        'de.huxhorn.lilith.logback.encoder.core',
+'logback-logging-adapter':                     'de.huxhorn.lilith.logback.logging-adapter',
+'logback-multiplex-appender-access':           'de.huxhorn.lilith.logback.appender.multiplex-access',
+'logback-multiplex-appender-classic':          'de.huxhorn.lilith.logback.appender.multiplex-classic',
+'logback-multiplex-appender-classic-json':     'de.huxhorn.lilith.logback.appender.multiplex-classic-json',
+'logback-multiplex-appender-classic-xml':      'de.huxhorn.lilith.logback.appender.multiplex-classic-xml',
+'logback-multiplex-appender-core':             'de.huxhorn.lilith.logback.appender.multiplex-core',
+'logback-producer-access':                     'de.huxhorn.lilith.logback.producer.access',
+'logback-producer-classic':                    'de.huxhorn.lilith.logback.producer.classic',
+'logback-shutdown-context-listener':           'de.huxhorn.lilith.logback.servlet',
+'slf4j':                                       'de.huxhorn.lilith.slf4j',
+'tracing':                                     'de.huxhorn.lilith.tracing'
 ]
 
 buildscript {
