--- a/projectDependencies.gradle
+++ b/projectDependencies.gradle
@@ -13,37 +13,37 @@ project(':lilith-sender') {
 	}
 }
 
-project(':lilith-data:eventsource') {
+project(':lilith-data-eventsource') {
 	description = 'This file is part of Lilith. It contains the EventSource datatype and related classes.'
 	dependencies {
 		testCompile libraries.'sulky-junit'
 	}
 }
 
-project(':lilith-data:eventsource-xml') {
+project(':lilith-data-eventsource-xml') {
 	description = 'This file is part of Lilith. It contains XML I/O for EventSource.'
 	dependencies {
-		compile project(':lilith-data:eventsource')
+		compile project(':lilith-data-eventsource')
 		compile libraries.'sulky-stax'
 		compile libraries.'stax-api'
 		testCompile libraries.'stax'
 	}
 }
 
-project(':lilith-data:logging') {
+project(':lilith-data-logging') {
 	description = 'This file is part of Lilith. It contains the LoggingEvent datatype and related classes.'
 	dependencies {
-		compile project(':lilith-data:eventsource')
+		compile project(':lilith-data-eventsource')
 		compile libraries.'sulky-formatting'
 		testCompile libraries.'sulky-junit'
 	}
 }
 
-project(':lilith-data:logging-io-test') {
+project(':lilith-data-logging-io-test') {
 	description = 'This file is part of Lilith. It contains a Baseclass for LoggingEvent-De/Serializer tests.'
 	dependencies {
-		compile project(':lilith-data:eventsource')
-		compile project(':lilith-data:logging')
+		compile project(':lilith-data-eventsource')
+		compile project(':lilith-data-logging')
 		compile libraries.'sulky-formatting'
 		compile libraries.'sulky-junit'
 		compile libraries.junit
@@ -51,71 +51,71 @@ project(':lilith-data:logging-io-test') {
 	}
 }
 
-project(':lilith-data:logging-xml') {
+project(':lilith-data-logging-xml') {
 	description = 'This file is part of Lilith. It contains XML I/O for LoggingEvent.'
 	dependencies {
-		compile project(':lilith-data:logging')
-		compile project(':lilith-data:eventsource-xml')
+		compile project(':lilith-data-logging')
+		compile project(':lilith-data-eventsource-xml')
 		compile libraries.'sulky-stax'
 		compile libraries.'stax-api'
 		testCompile libraries.'stax'
-		testCompile project(':lilith-data:eventsource')
+		testCompile project(':lilith-data-eventsource')
 	}
 }
 
-project(':lilith-data:logging-xml-serializer') {
+project(':lilith-data-logging-xml-serializer') {
 	description = 'This file is part of Lilith. It contains XML De/Serializer for LoggingEvent.'
 	dependencies {
-		compile project(':lilith-data:logging-xml')
+		compile project(':lilith-data-logging-xml')
 		compile libraries.'sulky-codec'
 		compile libraries.'sulky-io'
 		compile libraries.'sulky-stax'
 		compile libraries.'stax-api'
 		testCompile libraries.'stax'
-		testCompile project(':lilith-data:logging')
-		testCompile project(':lilith-data:logging-io-test')
-		testCompile project(':lilith-data:eventsource')
+		testCompile project(':lilith-data-logging')
+		testCompile project(':lilith-data-logging-io-test')
+		testCompile project(':lilith-data-eventsource')
 	}
 }
 
-project(':lilith-data:logging-protobuf') {
+project(':lilith-data-logging-protobuf') {
 	description = 'This file is part of Lilith. It contains the Logging Protobuf classes.'
 	dependencies {
-		compile project(':lilith-data:logging')
+		compile project(':lilith-data-logging')
 		compile libraries.'protobuf'
 		compile libraries.'sulky-codec'
-		testCompile project(':lilith-data:logging-io-test')
-		testCompile project(':lilith-data:eventsource')
+		testCompile project(':lilith-data-logging-io-test')
+		testCompile project(':lilith-data-eventsource')
 	}
 }
 
-project(':lilith-data:logging-json-serializer') {
+project(':lilith-data-logging-json-serializer') {
 	description = 'This file is part of Lilith. It contains JSON De/Serializer for LoggingEvent.'
 	dependencies {
-		compile project(':lilith-data:logging')
+		compile project(':lilith-data-logging')
 		compile libraries.'sulky-codec'
 		compile libraries.'sulky-io'
 		compile libraries.'jackson-mapper'
-		testCompile project(':lilith-data:logging-io-test')
-		testCompile project(':lilith-data:eventsource')
+		testCompile project(':lilith-data-logging-io-test')
+		testCompile project(':lilith-data-eventsource')
 	}
 }
 
-project(':lilith-data:access') {
+project(':lilith-data-access') {
 	description = 'This file is part of Lilith. It contains the AccesEvent datatype and related classes.'
 	dependencies {
-		compile project(':lilith-data:eventsource')
+		compile project(':lilith-data-eventsource')
 		testCompile libraries.'sulky-junit'
 	}
 }
 
-project(':lilith-data:access-protobuf') {
+project(':lilith-data-access-protobuf') {
 	description = 'This file is part of Lilith. It contains the Access Protobuf classes.'
 	dependencies {
-		compile project(':lilith-data:access')
+		compile project(':lilith-data-access')
 		compile libraries.'protobuf'
 		compile libraries.'sulky-codec'
-		testCompile project(':lilith-data:eventsource')
+		testCompile project(':lilith-data-eventsource')
 	}
 }
 
@@ -130,11 +130,11 @@ project(':lilith-engine') {
 	dependencies {
 		compile project(':lilith-constants')
 		compile project(':lilith-sender')
-		compile project(':lilith-data:eventsource')
-		compile project(':lilith-data:logging')
-		compile project(':lilith-data:logging-protobuf')
-		compile project(':lilith-data:access')
-		compile project(':lilith-data:access-protobuf')
+		compile project(':lilith-data-eventsource')
+		compile project(':lilith-data-logging')
+		compile project(':lilith-data-logging-protobuf')
+		compile project(':lilith-data-access')
+		compile project(':lilith-data-access-protobuf')
 		compile libraries.'sulky-codec-filebuffer'
 		compile libraries.'sulky-buffers'
 		compile libraries.'sulky-conditions'
@@ -153,7 +153,7 @@ project(':lilith-xml-logging') {
 		compile libraries.'sulky-buffers'
 		compile libraries.'sulky-codec'
 		compile project(':lilith-engine')
-		compile project(':lilith-data:logging-xml-serializer')
+		compile project(':lilith-data-logging-xml-serializer')
 	}
 }
 
@@ -165,62 +165,62 @@ project(':lilith-json-logging') {
 		compile libraries.'sulky-buffers'
 		compile libraries.'sulky-codec'
 		compile project(':lilith-engine')
-		compile project(':lilith-data:logging-json-serializer')
+		compile project(':lilith-data-logging-json-serializer')
 	}
 }
 
-project(':logback:classic') {
+project(':logback-classic') {
 	description = 'This file is part of Lilith. It contains an NDC implementation that can be used in conjunction with the lilith appenders to get NDC functionality in Logback.'
 	dependencies {
-		compile project(':lilith-data:logging')
+		compile project(':lilith-data-logging')
 	}
 }
 
-project(':logback:logging-adapter') {
+project(':logback-logging-adapter') {
 	description = 'This file is part of Lilith. It contains the adapter to translate from logback to lilith logging events.'
 	dependencies {
-		compile project(':lilith-data:logging')
-		compile project(':logback:classic')
+		compile project(':lilith-data-logging')
+		compile project(':logback-classic')
 		compile libraries.'sulky-codec'
 		compile libraries.'slf4j-api'
 		compile libraries.'logback-classic'
 	}
 }
 
-project(':logback:access-adapter') {
+project(':logback-access-adapter') {
 	description = 'This file is part of Lilith. It contains the adapter to translate from logback to lilith access events.'
 	dependencies {
-		compile project(':lilith-data:access')
+		compile project(':lilith-data-access')
 		compile libraries.'sulky-codec'
 		compile libraries.'logback-access'
 	}
 }
 
-project(':logback:producer-classic') {
+project(':logback-producer-classic') {
 	description = 'This file is part of Lilith. It contains event producers.'
 	dependencies {
 		compile libraries.'logback-classic'
 		compile project(':lilith-engine')
-		compile project(':lilith-data:logging')
-		compile project(':logback:logging-adapter')
+		compile project(':lilith-data-logging')
+		compile project(':logback-logging-adapter')
 		compile libraries.'sulky-buffers'
 		compile libraries.'slf4j-api'
 	}
 }
 
-project(':logback:producer-access') {
+project(':logback-producer-access') {
 	description = 'This file is part of Lilith. It contains event producers.'
 	dependencies {
 		compile libraries.'logback-access'
 		compile project(':lilith-engine')
-		compile project(':lilith-data:access')
-		compile project(':logback:access-adapter')
+		compile project(':lilith-data-access')
+		compile project(':logback-access-adapter')
 		compile libraries.'sulky-buffers'
 		compile libraries.'slf4j-api'
 	}
 }
 
-project(':logback:multiplex-appender-core') {
+project(':logback-multiplex-appender-core') {
 	description = 'This file is part of Lilith. It contains the multiplexing appender core classes.'
 	dependencies {
 		compile project(':lilith-sender')
@@ -229,52 +229,52 @@ project(':logback:multiplex-appender-core') {
 	}
 }
 
-project(':logback:multiplex-appender-classic') {
+project(':logback-multiplex-appender-classic') {
 	description = 'This file is part of Lilith. It contains the multiplexing logging appender.'
 	dependencies {
 		compile libraries.'sulky-codec'
-		compile project(':lilith-data:logging-protobuf')
-		compile project(':logback:multiplex-appender-core')
-		compile project(':logback:logging-adapter')
+		compile project(':lilith-data-logging-protobuf')
+		compile project(':logback-multiplex-appender-core')
+		compile project(':logback-logging-adapter')
 		compile libraries.'logback-classic'
 	}
 }
 
-project(':logback:multiplex-appender-access') {
+project(':logback-multiplex-appender-access') {
 	description = 'This file is part of Lilith. It contains the multiplexing access appender.'
 	dependencies {
 		compile libraries.'sulky-codec'
-		compile project(':logback:multiplex-appender-core')
-		compile project(':lilith-data:access')
-		compile project(':lilith-data:access-protobuf')
-		compile project(':logback:access-adapter')
+		compile project(':logback-multiplex-appender-core')
+		compile project(':lilith-data-access')
+		compile project(':lilith-data-access-protobuf')
+		compile project(':logback-access-adapter')
 		compile libraries.'logback-access'
 	}
 }
 
-project(':logback:multiplex-appender-classic-xml') {
+project(':logback-multiplex-appender-classic-xml') {
 	description = 'This file is part of Lilith. It contains the multiplexing logging appender (XML).'
 	dependencies {
 		compile libraries.'sulky-codec'
-		compile project(':lilith-data:logging-xml-serializer')
-		compile project(':logback:multiplex-appender-core')
-		compile project(':logback:logging-adapter')
+		compile project(':lilith-data-logging-xml-serializer')
+		compile project(':logback-multiplex-appender-core')
+		compile project(':logback-logging-adapter')
 		compile libraries.'logback-classic'
 	}
 }
 
-project(':logback:multiplex-appender-classic-json') {
+project(':logback-multiplex-appender-classic-json') {
 	description = 'This file is part of Lilith. It contains the multiplexing logging appender (JSON).'
 	dependencies {
 		compile libraries.'sulky-codec'
-		compile project(':lilith-data:logging-json-serializer')
-		compile project(':logback:multiplex-appender-core')
-		compile project(':logback:logging-adapter')
+		compile project(':lilith-data-logging-json-serializer')
+		compile project(':logback-multiplex-appender-core')
+		compile project(':logback-logging-adapter')
 		compile libraries.'logback-classic'
 	}
 }
 
-project(':logback:shutdown-context-listener') {
+project(':logback-shutdown-context-listener') {
 	description = 'This file is part of Lilith. It contains a ServletContextListener that shuts down logback.'
 	dependencies {
 		compile libraries.'slf4j-api'
@@ -283,7 +283,7 @@ project(':logback:shutdown-context-listener') {
 	}
 }
 
-project(':logback:encoder-core') {
+project(':logback-encoder-core') {
 	description = 'This file is part of Lilith. It contains the encoder base class.'
 	dependencies {
 		compile project(':lilith-constants')
@@ -293,45 +293,45 @@ project(':logback:encoder-core') {
 	}
 }
 
-project(':logback:encoder-classic') {
+project(':logback-encoder-classic') {
 	description = 'This file is part of Lilith. It contains the classic encoder.'
 	dependencies {
 		compile libraries.'slf4j-api'
 		compile libraries.'sulky-codec'
-		compile project(':logback:encoder-core')
-		compile project(':logback:logging-adapter')
-		compile project(':lilith-data:logging-protobuf')
+		compile project(':logback-encoder-core')
+		compile project(':logback-logging-adapter')
+		compile project(':lilith-data-logging-protobuf')
 		compile libraries.'logback-core'
 		compile libraries.'logback-classic'
 		testCompile project(':lilith-constants')
 	}
 }
 
-project(':logback:encoder-access') {
+project(':logback-encoder-access') {
 	description = 'This file is part of Lilith. It contains the access encoder.'
 	dependencies {
 		compile libraries.'sulky-codec'
-		compile project(':logback:encoder-core')
-		compile project(':lilith-data:access-protobuf')
-		compile project(':logback:access-adapter')
+		compile project(':logback-encoder-core')
+		compile project(':lilith-data-access-protobuf')
+		compile project(':logback-access-adapter')
 		compile libraries.'logback-core'
 		compile libraries.'logback-access'
 	}
 }
 
-project(':log4j:log4j-throwable-parser') {
+project(':log4j-throwable-parser') {
 	description = 'This file is part of Lilith. It contains the Log4j ThrowableInfo-Parser.'
 	dependencies {
-		compile project(':lilith-data:logging')
+		compile project(':lilith-data-logging')
 		compile libraries.'slf4j-api'
 	}
 }
 
-project(':log4j:log4j-xml') {
+project(':log4j-xml') {
 	description = 'This file is part of Lilith. It contains LOG4J XML I/O.'
 	dependencies {
-		compile project(':lilith-data:logging')
-		compile project(':log4j:log4j-throwable-parser')
+		compile project(':lilith-data-logging')
+		compile project(':log4j-throwable-parser')
 		compile libraries.'sulky-stax'
 		compile libraries.'sulky-tasks'
 		compile libraries.'sulky-buffers'
@@ -340,15 +340,15 @@ project(':log4j:log4j-xml') {
 		compile libraries.'sulky-io'
 		compile libraries.'stax-api'
 		testRuntime libraries.'stax'
-		testCompile project(':lilith-data:eventsource')
+		testCompile project(':lilith-data-eventsource')
 	}
 }
 
-project(':log4j:log4j-producer') {
+project(':log4j-producer') {
 	description = 'This file is part of Lilith. It contains the LOG4J Producer.'
 	dependencies {
-		compile project(':lilith-data:logging')
-		compile project(':log4j:log4j-throwable-parser')
+		compile project(':lilith-data-logging')
+		compile project(':log4j-throwable-parser')
 		compile libraries.'sulky-buffers'
 		compile project(':lilith-engine')
 		compile libraries.'slf4j-api'
@@ -356,25 +356,25 @@ project(':log4j:log4j-producer') {
 	}
 }
 
-project(':jul:jul-xml') {
+project(':jul-xml') {
 	description = 'This file is part of Lilith. It contains java.util.logging XML I/O.'
 	dependencies {
-		compile project(':lilith-data:logging')
+		compile project(':lilith-data-logging')
 		compile libraries.'sulky-stax'
 		compile libraries.'slf4j-api'
 		compile libraries.'commons-io'
 		compile libraries.'sulky-io'
 		compile libraries.'stax-api'
 		testRuntime libraries.'stax'
-		testCompile project(':lilith-data:eventsource')
+		testCompile project(':lilith-data-eventsource')
 	}
 }
 
-project(':jul:jul-xml-import') {
+project(':jul-xml-import') {
 	description = 'This file is part of Lilith. It contains java.util.logging XML-Import.'
 	dependencies {
-		compile project(':lilith-data:logging')
-		compile project(':jul:jul-xml')
+		compile project(':lilith-data-logging')
+		compile project(':jul-xml')
 		compile libraries.'sulky-stax'
 		compile libraries.'sulky-tasks'
 		compile libraries.'sulky-buffers'
@@ -383,15 +383,15 @@ project(':jul:jul-xml-import') {
 		compile libraries.'sulky-io'
 		compile libraries.'stax-api'
 		testRuntime libraries.'stax'
-		testCompile project(':lilith-data:eventsource')
+		testCompile project(':lilith-data-eventsource')
 	}
 }
 
-project(':jul:jul-xml-receiver') {
+project(':jul-xml-receiver') {
 	description = 'This file is part of Lilith. It contains java.util.logging XML I/O.'
 	dependencies {
-		compile project(':lilith-data:logging')
-		compile project(':jul:jul-xml')
+		compile project(':lilith-data-logging')
+		compile project(':jul-xml')
 		compile project(':lilith-engine')
 		compile libraries.'sulky-stax'
 		compile libraries.'sulky-buffers'
@@ -400,11 +400,11 @@ project(':jul:jul-xml-receiver') {
 		compile libraries.'sulky-io'
 		compile libraries.'stax-api'
 		testRuntime libraries.'stax'
-		testCompile project(':lilith-data:eventsource')
+		testCompile project(':lilith-data-eventsource')
 	}
 }
 
-project(':jul:jul-slf4j-handler') {
+project(':jul-slf4j-handler') {
 	description = 'This file is part of Lilith. It\'s a java.util.logging to slf4j bridge handler.'
 	dependencies {
 		compile libraries.'slf4j-api'
@@ -428,9 +428,9 @@ project(':lilith-prefs') {
 project(':lilith-conditions') {
 	description = 'This file is part of Lilith. It contains conditions.'
 	dependencies {
-		compile project(':lilith-data:eventsource')
-		compile project(':lilith-data:logging')
-		compile project(':lilith-data:access')
+		compile project(':lilith-data-eventsource')
+		compile project(':lilith-data-logging')
+		compile project(':lilith-data-access')
 		compile libraries.'sulky-conditions'
 		compile libraries.'sulky-groovy'
 		compile libraries.'slf4j-api'
@@ -447,26 +447,26 @@ project(':lilith') {
 		compile libraries.'logback-classic'
 		compile libraries.'logback-access'
 		compile project(':lilith-conditions')
-		compile project(':logback:producer-classic')
-		compile project(':logback:producer-access')
-		compile project(':lilith-data:logging')
-		compile project(':lilith-data:logging-protobuf')
-		compile project(':lilith-data:access')
+		compile project(':logback-producer-classic')
+		compile project(':logback-producer-access')
+		compile project(':lilith-data-logging')
+		compile project(':lilith-data-logging-protobuf')
+		compile project(':lilith-data-access')
 		compile project(':lilith-engine')
-		compile project(':log4j:log4j-producer')
+		compile project(':log4j-producer')
 		runtime libraries.'jgoodies-looks'
-		compile project(':jul:jul-slf4j-handler')
-		compile project(':logback:multiplex-appender-classic')
-		compile project(':logback:multiplex-appender-classic-xml')
-		compile project(':logback:multiplex-appender-classic-json')
-		compile project(':logback:multiplex-appender-access')
+		compile project(':jul-slf4j-handler')
+		compile project(':logback-multiplex-appender-classic')
+		compile project(':logback-multiplex-appender-classic-xml')
+		compile project(':logback-multiplex-appender-classic-json')
+		compile project(':logback-multiplex-appender-access')
 		compile project(':lilith-xml-logging')
 		compile project(':lilith-json-logging')
-		compile project(':logback:logging-adapter')
-		compile project(':log4j:log4j-xml')
-		compile project(':jul:jul-xml')
-		compile project(':jul:jul-xml-import')
-		compile project(':jul:jul-xml-receiver')
+		compile project(':logback-logging-adapter')
+		compile project(':log4j-xml')
+		compile project(':jul-xml')
+		compile project(':jul-xml-import')
+		compile project(':jul-xml-receiver')
 		compile project(':lilith-prefs')
 		compile libraries.'servlet-api'
 		compile libraries.'groovy'
@@ -504,7 +504,7 @@ project(':slf4j') {
 	description = 'This is a concept how SLF4J could be redesigned for Java>=5'
 	dependencies {
 		compile libraries.'slf4j-api'
-		testRuntime project(':logback:multiplex-appender-classic')
+		testRuntime project(':logback-multiplex-appender-classic')
 	}
 }
 
@@ -521,7 +521,7 @@ project(':tracing') {
 		testRuntime libraries.'cglib-nodep'
 		testRuntime libraries.'jcl-over-slf4j'
 		testRuntime libraries.'spring-aop'
-		testRuntime project(':logback:multiplex-appender-classic')
+		testRuntime project(':logback-multiplex-appender-classic')
 	}
 }
 
