--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,38 @@
-include 'lilith-sender', 'lilith-data:eventsource', 'lilith-data:eventsource-xml', 'lilith-data:logging', 'lilith-data:logging-io-test', 'lilith-data:logging-xml', 'lilith-data:logging-json', 'lilith-data:logging-xml-serializer', 'lilith-data:logging-protobuf', 'lilith-data:logging-json-serializer', 'lilith-data:access', 'lilith-data:access-protobuf', 'lilith-constants', 'lilith-engine', 'lilith-xml-logging', 'lilith-json-logging', 'logback:classic', 'logback:logging-adapter', 'logback:access-adapter', 'logback:producer-classic', 'logback:producer-access', 'logback:multiplex-appender-core', 'logback:multiplex-appender-classic', 'logback:multiplex-appender-access', 'logback:multiplex-appender-classic-xml', 'logback:multiplex-appender-classic-json', 'logback:shutdown-context-listener', 'logback:encoder-core', 'logback:encoder-classic', 'logback:encoder-access', 'log4j:log4j-throwable-parser', 'log4j:log4j-xml', 'log4j:log4j-producer', 'jul:jul-xml', 'jul:jul-xml-import', 'jul:jul-xml-receiver', 'jul:jul-slf4j-handler', 'lilith-sounds', 'lilith-prefs', 'lilith-conditions', 'lilith', 'slf4j', 'tracing'
+include 'lilith'
+include 'lilith-conditions'
+include 'lilith-constants'
+include 'lilith-engine'
+include 'lilith-json-logging'
+include 'lilith-prefs'
+include 'lilith-sender'
+include 'lilith-sounds'
+include 'lilith-xml-logging'
+include 'slf4j'
+include 'tracing'
+
+new File(rootDir, "lilith-data").eachDir { dir ->
+	if(dir.name != 'xml-schema') {
+		def moduleName = "${dir.parentFile.name}-${dir.name}"
+		include "${moduleName}"
+		project(":${moduleName}").projectDir = dir
+    }
+}
+
+new File(rootDir, 'jul').eachDir { dir ->
+	def moduleName = "${dir.name}"
+	include "${moduleName}"
+	project(":${moduleName}").projectDir = dir
+}
+
+new File(rootDir, 'log4j').eachDir { dir ->
+	def moduleName = "${dir.name}"
+	include "${moduleName}"
+	project(":${moduleName}").projectDir = dir
+}
+
+new File(rootDir, "logback").eachDir { dir ->
+	def moduleName = "${dir.parentFile.name}-${dir.name}"
+	include "${moduleName}"
+	project(":${moduleName}").projectDir = dir
+}
+
