Added printing of status messages after shutdown of Logback. Status messages will be printed if any WARN or ERROR status is available. Added debug option to always print status regardless of level.

--- a/sandbox/logback-access-sandbox/src/main/webapp/WEB-INF/web.xml
+++ b/sandbox/logback-access-sandbox/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,12 @@
 <web-app>
 	<display-name>hello-world</display-name>
 
-    <listener>
+	<context-param>
+		<param-name>LogbackShutdownDebug</param-name>
+		<param-value>true</param-value>
+	</context-param>
+
+	<listener>
 		<listener-class>
 			de.huxhorn.lilith.logback.servlet.LogbackShutdownServletContextListener
 		</listener-class>
