Using 'signing' plugin instead of pgp-plugin.
Added cleanStaging and cleanSnapshot tasks.

--- a/config.gradle
+++ b/config.gradle
@@ -1,5 +1,6 @@
 import org.apache.tools.ant.filters.FixCrLfFilter
 import de.huxhorn.sulky.plist.*
+import org.gradle.plugins.signing.Sign
 
 apply from: 'GitHeadHash.gradle'
 
@@ -60,26 +61,17 @@ buildscript {
 		mavenRepo urls: localReleaseRepo
 		mavenRepo urls: localSnapshotRepo
 	}
-	if(System.properties.'release')
-	{
-		dependencies {
-			classpath 'de.huxhorn.gradle:de.huxhorn.gradle.pgp-plugin:0.0.3',
-			'org.apache.maven.wagon:wagon-webdav-jackrabbit:1.0-beta-6',
-			"de.huxhorn.sulky:de.huxhorn.sulky.plist:${versions.sulky}"
-		}
-	}
-	else
-	{
-		dependencies {
-			classpath 'org.apache.maven.wagon:wagon-webdav-jackrabbit:1.0-beta-6',
-			"de.huxhorn.sulky:de.huxhorn.sulky.plist:${versions.sulky}"
-		}
+	dependencies {
+		// needed for syncSnapshot and syncStaging
+		classpath 'org.apache.maven.wagon:wagon-webdav-jackrabbit:1.0-beta-6',
+		"de.huxhorn.sulky:de.huxhorn.sulky.plist:${versions.sulky}"
 	}
 }
 
 dependsOnChildren()
 
 apply plugin: 'base'
+apply plugin: 'signing'
 
 task javadoc(type: Javadoc) {
 	destinationDir = file("$buildDir/javadoc")
@@ -97,46 +89,30 @@ task javadocZip(type: Zip) {
 	from javadoc.outputs.files
 }
 
-task syncStaging << {
-	if (project.hasProperty('remoteUsername') && project.hasProperty('remotePassword')) {
-		def stagingRepos = new org.apache.maven.wagon.repository.Repository('staging', 'https://oss.sonatype.org/service/local/staging/deploy/maven2')
-		def auth = new org.apache.maven.wagon.authentication.AuthenticationInfo()
-		auth.userName = remoteUsername
-		auth.password = remotePassword
-		def wagon = new org.apache.maven.wagon.providers.webdav.WebDavWagon()
-
-		wagon.connect(stagingRepos, auth)
-		localReleaseRepoFile.eachFile {
-			if (it.directory) {
-				wagon.putDirectory(it, it.name)
-			} else {
-				wagon.put(it, it.name)
-			}
-		}
-	} else {
-		println "Can't sync staging as credentials aren't set. Set with -PremoteUsername=user -PremotePassword=password."
+signing {
+	if (System.properties.'release') {
+		sign javadocZip
+		sign sourceZip
 	}
 }
 
-task syncSnapshot << {
-	if (project.hasProperty('remoteUsername') && project.hasProperty('remotePassword')) {
-		def snapshotRepos = new org.apache.maven.wagon.repository.Repository('snapshot', 'https://oss.sonatype.org/content/repositories/snapshots')
-		def auth = new org.apache.maven.wagon.authentication.AuthenticationInfo()
-		auth.userName = remoteUsername
-		auth.password = remotePassword
-		def wagon = new org.apache.maven.wagon.providers.webdav.WebDavWagon()
-
-		wagon.connect(snapshotRepos, auth)
-		localSnapshotRepoFile.eachFile {
-			if (it.directory) {
-				wagon.putDirectory(it, it.name)
-			} else {
-				wagon.put(it, it.name)
-			}
+gradle.taskGraph.whenReady { taskGraph ->
+	if (taskGraph.allTasks.any { it instanceof Sign }) {
+		String pgpPassword = System.properties.'pgpPassword'
+		if(!pgpPassword) {
+			Console console = System.console()
+			pgpPassword = new String(console.readPassword("\nPGP Private Key Password: "))
 		}
-	} else {
-		println "Can't sync snapshots as credentials aren't set. Set with -PremoteUsername=user -PremotePassword=password."
+		allprojects*.setProperty('signing.password', pgpPassword)
+		allprojects*.setProperty('signing.keyId','740A1840')
+		allprojects*.setProperty('signing.secretKeyRingFile', new File("${System.properties['user.home']}/.gnupg/secring.gpg").absolutePath)
 	}
+}
+
+if(!System.properties.'release') {
+	defaultTasks 'build', 'uploadPublished'	
+} else {
+	defaultTasks 'build', 'uploadPublished', 'signJavadocZip', 'signSourceZip'	
 }
 
 allprojects {
@@ -144,7 +120,6 @@ allprojects {
 	apply plugin: 'eclipse'
 	apply plugin: 'idea'
 
-	defaultTasks 'build', 'uploadArchives'
 	group = 'de.huxhorn.lilith'
 	version = '0.9.42'
 	if(!System.properties.'release')
@@ -156,7 +131,9 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'maven'
-    //apply plugin: 'code-quality'
+    apply plugin: 'signing'
+
+	defaultTasks 'build', 'uploadPublished'
 
     sourceCompatibility = 1.5
     targetCompatibility = 1.5
@@ -165,14 +142,9 @@ subprojects {
     compileJava.options.compilerArgs = compilerArgs
     compileTestJava.options.compilerArgs = compilerArgs
 
-	if(System.properties.'release')
-	{
-		//apply plugin: 'sign'
-		apply plugin: de.huxhorn.gradle.pgp.PgpPlugin
-
-		pgp {
-			secretKeyRingFile = new File("${System.properties['user.home']}/.gnupg/secring.gpg")
-			keyId = '740A1840'
+	signing {
+		if (System.properties.'release') {
+			sign configurations.archives
 		}
 	}
 
@@ -285,6 +257,7 @@ subprojects {
     
 	configurations {
 		all*.exclude group: 'commons-logging', module: 'commons-logging'
+		published.extendsFrom archives, signatures
 	}
 	
     dependencies {
@@ -300,7 +273,7 @@ subprojects {
 	def deployer = null
 	
 	// the following is a workaround for http://jira.codehaus.org/browse/GRADLE-443
-	uploadArchives {
+	uploadPublished {
 		deployer = repositories.mavenDeployer {
 			repository(url: localReleaseRepo)
 			snapshotRepository(url: localSnapshotRepo)
@@ -310,9 +283,14 @@ subprojects {
 					//println(dep.artifactId)
 					mapping=artifactMapping[dep.artifactId];
 					if(mapping) {
-						println("Mapping ${dep.artifactId} to ${mapping}...")
+						//println("Mapping ${dep.artifactId} to ${mapping}...")
 						dep.artifactId=mapping
 					}
+				}
+			}
+			beforeDeployment { MavenDeployment deployment ->
+				if(System.properties.'release') {
+					signPom(deployment)
 				}
 			}
 		}
@@ -623,4 +601,73 @@ project(':lilith') {
 		compression = Compression.GZIP
 		with appSpec
 	}
+	
+	signing {
+		if (System.properties.'release') {
+			sign distZip
+			sign myDistZip
+			sign myDistTgz
+			sign appTgz
+		}
+	}
 }
+
+def deleteClosure
+deleteClosure = {
+	// delete content of it recursively
+	it.eachDir( deleteClosure );
+	it.eachFile {
+		it.delete()
+	}
+}
+
+task cleanStaging << {	
+	deleteClosure(localReleaseRepoFile)
+}
+
+task cleanSnapshot << {	
+	deleteClosure(localSnapshotRepoFile)
+}
+
+task syncStaging << {
+	if (project.hasProperty('remoteUsername') && project.hasProperty('remotePassword')) {
+		def stagingRepos = new org.apache.maven.wagon.repository.Repository('staging', 'https://oss.sonatype.org/service/local/staging/deploy/maven2')
+		def auth = new org.apache.maven.wagon.authentication.AuthenticationInfo()
+		auth.userName = remoteUsername
+		auth.password = remotePassword
+		def wagon = new org.apache.maven.wagon.providers.webdav.WebDavWagon()
+
+		wagon.connect(stagingRepos, auth)
+		localReleaseRepoFile.eachFile {
+			if (it.directory) {
+				wagon.putDirectory(it, it.name)
+			} else {
+				wagon.put(it, it.name)
+			}
+		}
+	} else {
+		println "Can't sync staging as credentials aren't set. Set with -PremoteUsername=user -PremotePassword=password."
+	}
+}
+
+task syncSnapshot << {
+	if (project.hasProperty('remoteUsername') && project.hasProperty('remotePassword')) {
+		def snapshotRepos = new org.apache.maven.wagon.repository.Repository('snapshot', 'https://oss.sonatype.org/content/repositories/snapshots')
+		def auth = new org.apache.maven.wagon.authentication.AuthenticationInfo()
+		auth.userName = remoteUsername
+		auth.password = remotePassword
+		def wagon = new org.apache.maven.wagon.providers.webdav.WebDavWagon()
+
+		wagon.connect(snapshotRepos, auth)
+		localSnapshotRepoFile.eachFile {
+			if (it.directory) {
+				wagon.putDirectory(it, it.name)
+			} else {
+				wagon.put(it, it.name)
+			}
+		}
+	} else {
+		println "Can't sync snapshots as credentials aren't set. Set with -PremoteUsername=user -PremotePassword=password."
+	}
+}
+
