Fixing build of fatjar.
I guess this was caused by a Gradle 1.0-M4 change.

--- a/config.gradle
+++ b/config.gradle
@@ -437,6 +437,7 @@ project(':lilith') {
 		)
 
 		from (sourceSets.main.output.classesDir)
+		from (sourceSets.main.output.resourcesDir)
 
 		doFirst {  // <- note the doFirst
 			// the following must be executed in doFirst since the configuration
